force-app/main/default/objects/CTRIntegrationMapping__mdt.object
<CustomObject>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TOP</fullName>
                    <default>true</default>
                    <label>TOP</label>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IntegrationType__c</fullName>
        <label>Integration Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Edit</fullName>
                    <default>true</default>
                    <label>Edit</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JsonMapping__c</fullName>
        <label>Json Mapping</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                    <default>true</default>
                    <label>Customer</label>
                </value>
                <value>
                    <fullName>Supplier</fullName>
                </value>
                <value>
                    <fullName>ShipTo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SupportIntegrationType__c</fullName>
        <label>Support Integration Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ViewName__c</fullName>
        <label>View Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Important Data</fullName>
                    <default>true</default>
                    <label>Important Data</label>
                </value>
                <value>
                    <fullName>CentralData</fullName>
                </value>
                <value>
                    <fullName>AddressGen</fullName>
                </value>
                <value>
                    <fullName>AddressInt I</fullName>
                </value>
                <value>
                    <fullName>AddressInt T</fullName>
                </value>
                <value>
                    <fullName>CompanyCodeView</fullName>
                </value>
                <value>
                    <fullName>PurchasingView</fullName>
                </value>
                <value>
                    <fullName>WithHoldingTax</fullName>
                </value>
                <value>
                    <fullName>TaxClassification</fullName>
                </value>
                <value>
                    <fullName>SalesData</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CTRIntegrationMapping</label>
    <listViews>
        <fullName>All_field_view</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>SupportIntegrationType__c</columns>
        <columns>BusinessUnit__c</columns>
        <columns>IntegrationType__c</columns>
        <columns>RecordType__c</columns>
        <columns>ViewName__c</columns>
        <columns>JsonMapping__c</columns>
        <filterScope>Everything</filterScope>
        <label>All field view</label>
    </listViews>
</CustomObject>